--- a/posenet/demos/camera.html
+++ b/posenet/demos/camera.html
@@ -84,26 +84,14 @@
         <div class="sk-spinner sk-spinner-pulse"></div>
     </div>
     <div id='main' style='display:none'>
-        <video id="video" playsinline style=" -moz-transform: scaleX(-1);
-        -o-transform: scaleX(-1);
-        -webkit-transform: scaleX(-1);
-        transform: scaleX(-1);
-        display: none;
+        <video id="video" playsinline controls style="
+            position: absolute
         ">
         </video>
-        <canvas id="output" />
-    </div>
-    <div class="footer">
-        <div class="footer-text">
-            <p>
-                PoseNet runs with either a <strong>single-pose</strong> or <strong>multi-pose</strong> detection
-                algorithm. The single person pose detector is faster and more accurate but requires only one subject
-                present in the image.
-                <br>
-                <br> The <strong>output stride</strong> and <strong>input resolution</strong> have the largest effects
-                on accuracy/speed. A <i>higher</i> output stride results in lower accuracy but higher speed. A
-                <i>higher</i> image scale factor results in higher accuracy but lower speed. </p>
-        </div>
+        <canvas id="output" style="
+            position: absolute;
+            pointer-events: none;
+        "/>
     </div>
     <script src="camera.js"></script>
 </body>
