Revert "WIP: babel still doesn't understand js exports and imports"
This reverts commit 8e56c81085684cb232dd044ea63de84fd550e4c6.

--- a/posenet/demos/camera.html
+++ b/posenet/demos/camera.html
@@ -85,8 +85,7 @@
     </div>
     <div id='main' style='display:none'>
         <video id="video" playsinline controls style="
-            position: absolute;
-            display:none;
+            position: absolute
         ">
         </video>
         <canvas id="output" style="
@@ -94,9 +93,6 @@
             pointer-events: none;
         "/>
     </div>
-    <!-- <video id="preview" playsinline controls style="
-        margin-top: 300px;
-    "></video> -->
     <script src="camera.js"></script>
 </body>
 
