--- a/posenet/demos/camera.html
+++ b/posenet/demos/camera.html
@@ -93,7 +93,7 @@
             pointer-events: none;
         "/>
     </div>
-    <script src="camera.js"></script>
+    <script src="camera.ts"></script>
 </body>
 
 </html>
