--- a/posenet/demos/camera.html
+++ b/posenet/demos/camera.html
@@ -90,9 +90,13 @@
         </video>
         <canvas id="output" style="
             position: absolute;
+            display: none;
             pointer-events: none;
         "/>
     </div>
+    <video id="preview" playsinline controls style="
+        margin-top: 300px;
+    "></video>
     <script src="camera.ts"></script>
 </body>
 
