hacked the scales to be the same

--- a/posenet/demos/camera.html
+++ b/posenet/demos/camera.html
@@ -90,7 +90,7 @@
         </video>
         <canvas id="output" style="
             position: absolute;
-            display: none;
+            /* display: none; */
             pointer-events: none;
         "/>
     </div>
